fixed creation form styles

--- a/src/style/creation-manager.scss
+++ b/src/style/creation-manager.scss
@@ -9,8 +9,8 @@
         padding: 10px;
 
         .upper-part-wrapper {
-            justify-content: flex-start;
-            align-content: flex-start;
+            justify-self: center;
+            align-content: center;
 
             .creation-form-wrapper {
                 display: grid;
